--- a/src/NuGet.Clients/NuGet.PackageManagement.UI/Xamls/InfiniteScrollList.xaml
+++ b/src/NuGet.Clients/NuGet.PackageManagement.UI/Xamls/InfiniteScrollList.xaml
@@ -343,6 +343,7 @@
             Padding="1"
             SnapsToDevicePixels="true">
             <ScrollViewer
+              x:Name="scroll"
               Template="{StaticResource ScrollViewerWithScrollBarExtraLargeOnTop}"
               Focusable="false"
               Padding="{TemplateBinding Padding}">
